--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,16 @@
 [metadata]
-name = your_project_name
+name = kmeans
 author = Francisco
 version = 0.1
 [options]
 install_requires =
-    pandas
+    flake8
     numpy
+    pandas
+    pytest
+    pytest-cov
+    tqdm
     matplotlib
-    scikit-learn
+    numpy
     seaborn
+
