--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,7 +6,8 @@ name: Python application
 on:
   push:
     branches: [ "**" ]
-    path-ignore: 'docks/**'
+    path-ignore:
+      - '**.md'
   pull_request:
     branches: [ "main" ]
 
